--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
+		"faker": "^5.5.3",
 		"mysql2": "^2.3.2",
 		"password-hash": "^1.2.2",
 		"sequelize": "^6.9.0",
