production and date fix

--- a/config/config.json
+++ b/config/config.json
@@ -18,6 +18,7 @@
 		"password": null,
 		"database": "plus_min_tracker",
 		"host": "127.0.0.1",
-		"dialect": "mysql"
+		"dialect": "mysql",
+		"logging": false
 	}
 }
